added font to chrome extension

--- a/swag.css
+++ b/swag.css
@@ -1,3 +1,11 @@
+@font-face{ 
+  font-family: open-dyslexic;
+  font-style:normal;
+  font-weight:400;
+  src:local('Open-Dyslexic'), url(https://fonts.cdnfonts.com/s/29616/open-dyslexic.woff) format('woff')
+}
+
+
 .extension-card {
     width: 300px;
     border: 1px solid #e0e0e0;
@@ -42,3 +50,14 @@
     color: #0056b3;
   }
   
+ 
+  body {
+    font-family: 'Open-Dyslexic', sans-serif;
+  }
+  
+  .extension-card__title,
+  .extension-card__description,
+  .extension-card__content a {
+    font-family: 'Open-Dyslexic', sans-serif;
+  }
+
